tests/test_assets/semantic/invalid/enums/unknown_member.cog
Color :: enum(u16) {
    Red,
    Green,
    Blue,
}

BadEnumMemberUse: Color = Color.Purple;