tests/test_assets/semantic/invalid/enums/unknown_member.expected
semantic error at line 7: unknown enum member 'Purple'
1 semantic error generated.
